log/build_2026-03-19_20-34-20/object_detection/stderr.log
  File "/home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/lib/python3.12/site-packages/object_detection/object_detection.py", line 100
    else if self.get_parameter('model').value == "hammer":
         ^^
SyntaxError: expected ':'

